# chat-analyzer

./: .gitignore  Presentation_Document.md  WhatsApp_Chat_Analyzer_BTech_Report.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/api/: endpoints.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  analyzer.py  chatbot.py  pdf_gen.py  preprocessor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ChatPanel.css  ChatPanel.jsx  SoftAurora.jsx  index.css
